--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -62,8 +62,7 @@
         height: 18px;
     }
     .btn-text {
-        float: right;
-        margin: 11px 40px 0 0;
+        margin: 12px 0 0 55px;
         color: $white;
         font-size: 14px;
         letter-spacing: 0.2px;
